--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,6 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.mobsandgeeks:android-saripaar:2.0.3'
     implementation 'com.hbb20:ccp:2.1.4'
+    implementation 'me.dm7.barcodescanner:zxing:1.9.8'
 
 }
