Partial Event List implemented

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 
+
 android {
     compileSdkVersion 27
     buildToolsVersion "27.0.1"
@@ -59,4 +60,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'info.guardianproject.netcipher:netcipher:1.2'
 
+
+    compile 'com.google.android.gms:play-services-gcm:11.8.0'
+
 }
+apply plugin: 'com.google.gms.google-services'
