--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,7 +69,7 @@
             android:name=".views.MainActivity"
             android:windowActionBar="false" />
         <activity android:name=".views.events.event_detail.ScreenEventDetail" />
-        <activity android:name=".views.events.ScreenEventQR" />
+        <activity android:name=".views.events.event_qr.ScreenEventQR" />
         <activity android:name=".views.registration.RegistrationActivity" />
         <activity android:name=".views.login.ScreenLogin" />
         <activity android:name=".views.QRScanner" />
