--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,14 @@ apply plugin: 'com.android.application'
 
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'netaq'
+            keyPassword 'netaq@123'
+            storeFile file('E:/workspace/ZayedSons/zs.jks')
+            storePassword 'netaq@123'
+        }
+    }
     compileSdkVersion 27
     buildToolsVersion "27.0.1"
     defaultConfig {
@@ -18,9 +26,9 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -28,17 +36,14 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-//    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
-//        exclude group: 'com.android.support', module: 'support-annotations'
-//    })
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    //    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
+    //        exclude group: 'com.android.support', module: 'support-annotations'
+    //    })
     //testImplementation 'junit:junit:4.12'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
     implementation 'com.android.support:appcompat-v7:27.0.+'
     implementation 'com.android.support:support-v4:27.0.+'
     implementation 'com.android.support:design:27.0.+'
@@ -53,17 +58,12 @@ dependencies {
     implementation 'com.mobsandgeeks:android-saripaar:2.0.3'
     implementation 'com.hbb20:ccp:2.1.4'
     implementation 'me.dm7.barcodescanner:zxing:1.9.8'
-
     implementation 'io.reactivex.rxjava2:rxjava:2.0.5'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'info.guardianproject.netcipher:netcipher:1.2'
-
-
     implementation 'com.google.android.gms:play-services-gcm:11.8.0'
     implementation 'com.google.firebase:firebase-messaging:11.8.0'
-
-
 }
 apply plugin: 'com.google.gms.google-services'
