--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,7 @@
 
         <activity
             android:name=".views.ScreenSplash"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.FullScreen">
 
              <intent-filter>
@@ -65,25 +66,42 @@
         </activity>
         <activity
             android:name=".views.MainActivity"
+            android:screenOrientation="portrait"
             android:windowActionBar="false" />
         <activity
             android:name=".views.ProfileActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustPan" />
-        <activity android:name=".views.events.event_detail.ScreenEventDetail" />
-        <activity android:name=".views.events.event_qr.ScreenEventQR" />
-        <activity android:name=".views.registration.RegistrationActivity" />
-        <activity android:name=".views.login.ScreenLogin" />
-        <activity android:name=".views.QRScanner" />
+
+        <activity android:name=".views.events.event_detail.ScreenEventDetail"
+                  android:screenOrientation="portrait"/>
+
+        <activity android:name=".views.events.event_qr.ScreenEventQR"
+                  android:screenOrientation="portrait"/>
+
+        <activity android:name=".views.registration.RegistrationActivity"
+                  android:screenOrientation="portrait"/>
+
+        <activity android:name=".views.login.ScreenLogin"
+                  android:screenOrientation="portrait"/>
+
+        <activity android:name=".views.QRScanner"
+                  android:screenOrientation="portrait"/>
+
         <activity
             android:name=".views.login.LoginWithMobile"
-            android:theme="@style/Theme.FullScreen">
+            android:theme="@style/Theme.FullScreen"
+            android:screenOrientation="portrait">
             <!--<intent-filter>-->
                 <!--<action android:name="android.intent.action.MAIN" />-->
 
                 <!--<category android:name="android.intent.category.LAUNCHER" />-->
             <!--</intent-filter>-->
         </activity>
-        <activity android:name=".views.ScreenOTP"></activity>
+        <activity android:name=".views.ScreenOTP"
+                  android:screenOrientation="portrait">
+
+        </activity>
     </application>
 
 </manifest>
