--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
         </service>
         <service
             android:name=".gcm.RegistrationIntentService"
-            android:exported="false"></service>
+            android:exported="false" />
 
         <activity
             android:name=".views.ScreenSplash"
@@ -72,14 +72,15 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".views.registration.RegistrationActivity"
-            android:screenOrientation="portrait" >
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
+            android:screenOrientation="portrait">
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
-
         <activity
             android:name=".views.login.ScreenLogin"
             android:screenOrientation="portrait" />
@@ -89,18 +90,18 @@
         <activity
             android:name=".views.login.LoginWithMobile"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.FullScreen">
-
-        </activity>
+            android:theme="@style/Theme.FullScreen"></activity>
         <activity
             android:name=".views.ScreenOTP"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".views.ScreenSearchableList"
+            android:theme="@style/Theme.AppCompat.Light.Dialog"></activity>
 
-        <activity android:name=".views.ScreenSearchableList"
+        <activity android:name=".ScreenAttendance"
                   android:theme="@style/Theme.AppCompat.Light.Dialog">
 
         </activity>
-
     </application>
 
 </manifest>
