--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-gcm:11.8.0'
     implementation 'com.google.firebase:firebase-messaging:11.8.0'
     implementation 'com.github.mzelzoghbi:zgallery:0.3'
+    implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
+
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
@@ -75,5 +77,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'design'
         exclude group: 'com.android.support', module: 'recyclerview-v7'
     }
+
+    //testCompile 'org.junit.jupiter:junit-jupiter-api'
 }
 apply plugin: 'com.google.gms.google-services'
